--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
     <title>Coffe Kings</title>
 </head>
 
@@ -126,6 +126,28 @@
             navigation.classList.toggle('active')
         }
     </script>
+    <div id="textoDebaixo">
+        <div id="conteudodebaixo">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor porro suscipit eligendi pariatur,
+                asperiores accusamus sunt? Aliquam eligendi labore repellat ea libero, animi rerum autem veritatis
+                officia ducimus culpa eum!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis in quaerat labore rerum, ullam sit eveniet
+                dicta harum quo rem repudiandae at facere reprehenderit minus minima officiis cum maiores animi?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias cum, molestiae sint beatae modi ut
+                aperiam error perferendis fugit expedita velit quod. Quae, molestiae provident? Quibusdam architecto
+                iste amet blanditiis?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis assumenda dolorum porro, in nulla
+                incidunt a fuga ab totam velit quam odio sunt atque, et qui laudantium pariatur obcaecati ullam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus aspernatur repudiandae illum
+                tempore quas, quidem rerum suscipit non minus recusandae ratione nulla eius modi praesentium autem cum
+                corrupti commodi.
+
+            </p>
+            <img src="/img/1595970.jpg" alt="">
+        </div>
+
+    </div>
 </body>
 
 </html>
